Fixed the highlight issue on the Nav bar and added a few css properties for the active bar and navigation bar to make it responsive on tablet and phone.

--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,12 @@ img {
 }
 
 .active {
-    color: red; /* Change the color to whatever you prefer */
-    font-weight: bold; /* Optional: Makes the text bolder */ 
+    color:#caff00 !important; 
+    font-weight: bold; 
 }
 
 .highlighted {
-  color: rgb(0, 255, 98); /* Or any other style you want for the active title */
+  color: rgb(0, 255, 98); 
 }
 
 .miles {
@@ -64,6 +64,7 @@ footer p {
 
 nav {
   display: flex;
+  margin: 22px;
 }
 
 ul {
@@ -76,7 +77,7 @@ h1 {
   color: rgb(121, 14, 14);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  font-size:25px;
+  font-size:38px;
 }
 
 h2 {
@@ -92,11 +93,11 @@ h3 {
 
 a {
   list-style-type: none;
-  font-size: 16px;
+  font-size: 19px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   color: #0e13a3;
-  margin: 10px;
+  margin: 5px;
 }
 
 a:link {
